--- a/app.json
+++ b/app.json
@@ -37,6 +37,7 @@
     },
     "updates": {
       "url": "https://u.expo.dev/cd82008f-69ef-4b91-a916-708157bc58ce"
-    }
+    },
+    "owner": "tingyuan"
   }
 }
