--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
       }
     },
     "runtimeVersion": {
-      "policy": "appVersion"
+      "policy": "sdkVersion"
     },
     "updates": {
       "url": "https://u.expo.dev/cd82008f-69ef-4b91-a916-708157bc58ce"
